--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.11",
     "axios": "^1.5.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "sass": "^1.68.0"
