--- a/admin/package.json
+++ b/admin/package.json
@@ -18,6 +18,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
+    "recharts": "^2.8.0",
     "sass": "^1.68.0"
   },
   "devDependencies": {
